tests/ui/consts/const_unsafe_unreachable_ub.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_unsafe_unreachable_ub.rs:8:28
   |
LL | const BAR: bool = unsafe { foo(false) };
   |                            ^^^^^^^^^^ entering unreachable code
   |
note: inside `foo`
  --> $DIR/const_unsafe_unreachable_ub.rs:4:18
   |
LL |         false => std::hint::unreachable_unchecked(),
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `unreachable_unchecked`
  --> $SRC_DIR/core/src/hint.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
